# phishing-ml

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  render.yaml
api/: urls.py  views.py
api/services/: ml_model.py  web_scrape.py
phishingml/: asgi.py  settings.py  urls.py  wsgi.py
